cmake_minimum_required(VERSION 2.8)
include_directories("${PROJECT_SOURCE_DIR}/include ${PROJECT_SOURCE_DIR}/src ${PROJECT_SOURCE_DIR}")
# find_package(PCRE REQUIRED)
set(libc6_SRCS main.cc)
set(LIBS ${LIBS} ${PCRE_LIBRARIES} c6)
add_library(c6 STATIC ${libc6_SRCS})
target_link_libraries(c6 lib3rdparty pcre)
